Refactor project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ if(MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 endif()
 set(CMAKE_C_STANDARD 99)
-add_executable(weekly main.c)
+add_executable(weekly main.c system.c record.c edit.c dump.c append.c)
